--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.17.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-geolocated": "^2.2.1",
     "react-router": "^4.2.0",
     "react-scripts": "1.0.17",
     "redux": "^3.7.2",
