--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "body-parser": "^1.18.2",
     "concurrently": "^3.5.1",
     "express": "^4.16.2",
+    "lodash": "^4.17.4",
     "mongoose": "^4.13.6"
   },
   "devDependencies": {
